[package]
name = "rotated-vec"
version = "0.1.1"
authors = ["Tobin Baker <tobin.d.baker@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A dynamic array mostly compatible with `std::vec::Vec`, supporting O(√n) inserts and deletes"
repository = "https://github.com/senderista/rotated-vec"

[lib]
name = "rotated_vec"
path = "src/lib.rs"
bench = false

[dev-dependencies]
is_sorted = "0.1.1"
proptest = "0.9"

[dependencies]
itertools = "0.8.0"
